fixed invalid url resolution

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home_page' %}">Home</a>
+                    <a class="nav-link" href="{% url 'books:home' %}">Home</a>
                 </li>
 
                 <!-- Product Dropdown -->
