--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -2,7 +2,10 @@
 
 {% block main_content %}
 
-    <!-- send user instance as object, populate the page with it -->
-    <p> Create Account Page</p>
+<form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
+	{{user_form.as_p}}
+    {{member_form.as_p}}
+	<input type="submit" class='btn btn-default' value="Create Account"/>
+</form>
 
 {% endblock main_content %}
