A basic profile viewing system was added into members.views.profile

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -5,5 +5,6 @@
     <!-- send user instance as object, populate the page with it -->
     <p> User Profile Page</p>
     <p> Slug: {{ slug }}</p> <!-- this will be passed in the url -->
+    <p> Member: {{ member }}</p>
 
 {% endblock main_content %}
