--- a/templates/base.html
+++ b/templates/base.html
@@ -161,13 +161,7 @@
 
 </div>
 
-<footer class="page-footer">
-    <ul>
-        <li> Link 1</li>
-        <li> Link 2</li>
-        <li> Link 3</li>
-    </ul>
-</footer>
+<!-- need working footer, previous one covered page content. -->
 
 </body>
 
