--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -4,6 +4,6 @@
 
     <!-- send user instance as object, populate the page with it -->
     <p> Item detail Page</p>
-    <p> Slug: {{ slug }}</p> <!-- this will be passed in the url -->
+    <p> Book: {{ book }}</p> <!-- this will be passed in the url -->
 
 {% endblock main_content %}
