Started Front-End.
Started work on Landing, Book-detail, and User-Profile.

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,13 @@
 
     <!-- Bootstrap.js CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+	
+	<!-- Stylesheet for each page -->
+	{% block LandingPage_css %} {% endblock LandingPage_css %}
+	{% block LandingPage_script %} {% endblock LandingPage_script %}
+	{% block BookDetailPage_css %} {% endblock BookDetailPage_css %}
+	{% block UserProfilePage_css %} {% endblock UserProfilePage_css %}
+	
 </head>
 
 <body>
