--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,9 +1,45 @@
 {% extends "base.html" %}
 
+{% block UserProfilePage_css %} <link rel="stylesheet" href="assets/User-Profile/css/user-profile-main.css"> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">{% endblock UserProfilePage_css %}
+
 {% block main_content %}
 
     <!-- send user instance as object, populate the page with it -->
-    <p> User Profile Page</p>
+    <body>
+		<div class="container-fluid">
+			<div class="row info_block">
+				<div class="col-12">
+					<img src="" alt="User_Profile_image"></img>
+					<ul>
+						<li>Name:</li>
+						<li>Email:</li>
+						<li>DoB:</li>
+					<ul>
+					<button id="edit" class="btn-sm btn-dark"> &nbsp<i class="fas fa-edit"></i></button>
+				</div>
+			</div>
+			<div class="row purchases">
+				<div class="col-12">
+					Purchase Carousel goes here.
+				</div>
+			</div>
+			<div class="row orders">
+				<div class="col-12">
+					Orders List goes here.
+				</div>
+			</div>
+			<div class="row others">
+				<div class="col-12">
+					<ul>
+						<li>Change Password:</li>
+						<li>Newsletter:</li>
+						<li>Delete:</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	
+	</body>
     <p> Slug: {{ slug }}</p> <!-- this will be passed in the url -->
 
 {% endblock main_content %}
