--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -59,6 +59,16 @@
 			</div>
 		</div>
 	</div>
+	
+	<nav class="foot navbar navbar-light bg-light">
+		  <a class="navbar-brand" href="#">
+			<img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+			<ul class="nav-list">
+				<li class="nav-list-item"></li>
+				<li class="nav-list-item">Back to Top</li>
+			</ul>
+		  </a>
+	</nav>
     <p> Slug: {{ slug }}</p> <!-- this will be passed in the url -->
 
 {% endblock main_content %}
