--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block UserProfilePage_css %} <link rel="stylesheet" href="assets/User-Profile/css/user-profile-main.css"> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">{% endblock UserProfilePage_css %}
+{% block UserProfilePage_css %} <link rel="stylesheet" href="assets/User-Profile/css/user-profile-main.css">  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">{% endblock UserProfilePage_css %}
 
 {% block main_content %}
 
@@ -8,37 +8,217 @@
     <body>
 		<div class="container-fluid">
 			<div class="row info_block">
-				<div class="col-12">
-					<img src="" alt="User_Profile_image"></img>
+				<div class="col-md-4">
+					<img src="assets/User-Profile/images/book_store.jpg" id="thumbnail" alt="User_Profile_image"></img>
+				</div>
+				<div class="col-4">
+					<ul class="vitals list-group">
+						<li class="list-group-item">Name:</li>
+						<li class="list-group-item">Email:</li>
+						<li class="list-group-item">DoB:</li>
 					<ul>
-						<li>Name:</li>
-						<li>Email:</li>
-						<li>DoB:</li>
-					<ul>
+				</div>
+				<div class="col-4">
 					<button id="edit" class="btn-sm btn-dark"> &nbsp<i class="fas fa-edit"></i></button>
 				</div>
 			</div>
+		</div>
+		<div class="container-fluid carousel-container">
 			<div class="row purchases">
 				<div class="col-12">
-					Purchase Carousel goes here.
+					<h3>Purchases:</h3>
+					<div class="span12">
+						<div class="carousel slide" id="purCarousel">
+							<div class="item-active">
+								<div class="control-box-left">                            
+									<a data-slide="prev" href="#myCarousel" class="carousel-control left"><i class="fas fa-3x fa-chevron-left"></i></a>
+								</div>
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+								<div class="control-box-right">
+									<a data-slide="next" href="#myCarousel" class="carousel-control right"><i class="fas fa-3x fa-chevron-right"></i></a>
+								</div>
+							</div>
+							<div class="item">
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="item">
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>	
+					</div>
 				</div>
 			</div>
+		</div>
+		<div class="container-fluid">
 			<div class="row orders">
 				<div class="col-12">
-					Orders List goes here.
+					<div class="span12">
+						<h3>Orders:</h3>
+						<div class="carousel slide" id="purCarousel">
+							<div class="item-active">
+								<div class="control-box-left">                            
+									<a data-slide="prev" href="#myCarousel" class="carousel-control left"><i class="fas fa-3x fa-chevron-left"></i></a>
+								</div>
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+								<div class="control-box-right">
+									<a data-slide="next" href="#myCarousel" class="carousel-control right"><i class="fas fa-3x fa-chevron-right"></i></a>
+								</div>
+							</div>
+							<div class="item">
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="item">
+								<ul class="book_imgs">
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+									<li class="span3">
+										<div class="book_img">
+											<a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"></img></a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div>
 				</div>
 			</div>
 			<div class="row others">
 				<div class="col-12">
-					<ul>
-						<li>Change Password:</li>
-						<li>Newsletter:</li>
-						<li>Delete:</li>
+					<ul class="list-group" id="block2">
+						<li class="list-group-item">Change Password:</li>
+						<li class="list-group-item">Newsletter:</li>
+						<li class="list-group-item">Delete: <button id="delete" class="btn-sm btn-dark center"> <i class="fas fa-trash-alt"></i></button></li>
 					</ul>
 				</div>
 			</div>
 		</div>
-	
+		
+		<nav class="foot navbar navbar-light bg-light">
+			  <a class="navbar-brand" href="#">
+				<img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+				<ul class="nav-list">
+					<li class="nav-list-item"></li>
+					<li class="nav-list-item">Back to Top</li>
+				</ul>
+			  </a>
+		</nav>
 	</body>
     <p> Slug: {{ slug }}</p> <!-- this will be passed in the url -->
 
