1. Made the user and book model less dumb (exchanged ManyToMany with ForeignKeys where needed) 2. Genres and Vendors now only have a name. 3. Created an Author model. 4. Updated the members.register() view to reflect changes. 5. Created a login_user() view and template (placeholder until nav bar is functional). 6. Created a logout_user() view. 7. Modified the profile view to work as intended. 8. Added additional context fields to books: landing, home. 9. Added authentication requirements for creating a book in create_book view. 10. Removed the client app. 11. Changed the UserForm, MemberForm, and BookForm 12. Added a UserLoginForm. 13. Edited/added various admin.py for apps. 14. Added login/ and logout/ url to members urls.py 15. Wrote 14 changes in a list. 15*

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -3,6 +3,34 @@
 {% block main_content %}
 
     <!-- item info will need to be passed into this -->
-    <p> Home Page</p>
+    <h1> Home Page</h1>
+
+    <h3>Genres: </h3>
+    <ul>
+    {% for genre in genres %}
+        <li>{{ genre }}</li>
+    {% endfor %}
+    </ul>
+
+    <h3>Books by {{ latest_author }}: </h3>
+    <ul>
+    {% for book in latest_author.book_set.all %}
+        <li>{{ book }}</li>
+    {% endfor %}
+    </ul>
+
+    <h3>New books: </h3>
+    <ul>
+    {% for book in new_books %}
+        <li>{{ book }}</li>
+    {% endfor %}
+    </ul>
+
+    <h3>Newly Added books: </h3>
+    <ul>
+    {% for book in newly_added_books %}
+        <li>{{ book }}</li>
+    {% endfor %}
+    </ul>
 
 {% endblock main_content %}
