--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,6 +3,20 @@
 {% block main_content %}
 
     <!-- send user instance as object, populate the page with it -->
-    <p> Landing Page</p>
+    <h1> Landing Page</h1>
+
+    <h3>New books: </h3>
+    <ul>
+    {% for book in new_books %}
+        <li>{{ book }}</li>
+    {% endfor %}
+    </ul>
+
+    <h3>Newly Added books: </h3>
+    <ul>
+    {% for book in newly_added_books %}
+        <li>{{ book }}</li>
+    {% endfor %}
+    </ul>
 
 {% endblock main_content %}
