Made user creation default to is_active being false.
Set user's is_active to False at creation. On email verification, is_active will be set to true. Also changed login to accomodate for this (further research needed into authenticate()

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,6 +4,7 @@
 
     <!-- item info will need to be passed into this -->
     <h1> Home Page</h1>
+    <p>{{ redirect_message }}</p>
 
     <h3>Genres: </h3>
     <ul>
