Additions to Cart html
Started the cart page with lists and buttons.

--- a/templates/assets/Book/css/book-detail-main.css
+++ b/templates/assets/Book/css/book-detail-main.css
@@ -85,7 +85,7 @@ body {
 	margin-top: 10px;
 	padding-right: 10px;
 	border-radius: 15px;
-	border-color: #12B886;
+	border-color: #8FB4C4;
 }
 
 .sidebar p {
