--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
 	{% block LandingPage_script %} {% endblock LandingPage_script %}
 	{% block BookDetailPage_css %} {% endblock BookDetailPage_css %}
 	{% block UserProfilePage_css %} {% endblock UserProfilePage_css %}
+	{% block CartPage_css %} {% endblock CartPage_css %}
 	
 </head>
 
