Password Hide fix
Changed the input type for the password inputs.

--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -25,8 +25,8 @@
 						<li class="list-group-item">Email:<input class="inputbox" type="text" value="Email Address" name="email"></input><br></li>
 						<li class="list-group-item">Street Address:<input class="inputbox" value="Street Address" type="text" name="address"></input></li>
 						<li class="list-group-item">DOB:<input class="inputboxSpec" id="Month" value="MM" type="text" name="Month"></input><input class="inputboxSpec" id="Day"  value="DD" type="text" name="Day"></input><input class="inputboxSpec" id="Year" value="YYYY" type="text" name="Year"></input><br></li>
-						<li class="list-group-item">Password:<input class="inputbox" value="Password" type="text" name="password"></input></li>
-						<li class="list-group-item">Re-enter Password:<input class="inputbox" value="Re-enter Password" type="text" name="password_confirm"></input></li>
+						<li class="list-group-item">Password:<input class="inputbox" value="Password" type="password" name="password"></input></li>
+						<li class="list-group-item">Re-enter Password:<input class="inputbox" value="Password" type="password" name="password_confirm"></input></li>
 						<li class="list-group-item">Receive our Newsletter:<input class="inputbox" type="checkbox" name="password_confirm"></input></li>
 						<li class="list-group-item">User-type:<select class="inputbox" name="account_type">
 								<option value="vendor">Vendor</option>
