--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block stylesheet %}
-    <link rel="stylesheet" href="assets/User-Profile/css/user-profile-main.css">
+    <link rel="stylesheet" href="{% static "css/user-profile-main.css" %}">
 {% endblock stylesheet %}
 
 {% block main_content %}
@@ -11,7 +13,7 @@
     <div class="container-fluid">
         <div class="row info_block">
             <div class="col-md-4">
-                <img src="assets/User-Profile/images/book_store.jpg" id="thumbnail" alt="User_Profile_image"/>
+                <img src="{% static "images/book_store.jpg" %}" id="thumbnail" alt="User_Profile_image"/>
             </div>
             <div class="col-4">
                 <ul class="vitals list-group">
@@ -40,25 +42,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
-                                        <a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"
+                                        <a href="#"><img class="book_elem" src="{% static "images/library.jpg" %}"
                                                          img></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -72,25 +74,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -100,25 +102,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -143,25 +145,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
-                                        <a href="#"><img class="book_elem" src="assets/User-Profile/images/library.jpg"
+                                        <a href="#"><img class="book_elem" src="{% static "images/library.jpg" %}"
                                                          img></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -175,25 +177,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -203,25 +205,25 @@
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                                 <li class="span3">
                                     <div class="book_img">
                                         <a href="#"><img class="book_elem"
-                                                         src="assets/User-Profile/images/library.jpg"/></a>
+                                                         src="{% static "images/library.jpg" %}"/></a>
                                     </div>
                                 </li>
                             </ul>
@@ -244,7 +246,7 @@
 
         <nav class="foot navbar navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top"
+                <img src="{% static "bootstrap-solid.svg" %}" width="30" height="30" class="d-inline-block align-top"
                      alt="">
                 <ul class="nav-list">
                     <li class="nav-list-item"></li>
