--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,47 +1,74 @@
 {% extends "base.html" %}
 
-{% block CreateAcctPage_css %} <link rel="stylesheet" href="assets/Create-Acct/css/create-acct-main.css">  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">{% endblock CreateAcctPage_css %}
+{% load static %}
+
+{% block stylesheet %}
+    <link rel="stylesheet" href="{% static "css/create-acct-main.css" %}">
+{% endblock stylesheet %}
 
 {% block main_content %}
 
-<body>
-	<div class="container-fluid banner">
-		<div class="row">
-			<div class="col-md-6">
-				<img id="banner_img" src="assets/Book/images/dogear.jpg"></img>
-			</div>
-			<div class="col-6">
-				<h3>Create your Dog-Ear account</h3>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="offset-4 col-md-8">
-				<form>
-					<ul class="list-group">
-						<li class="list-group-item">Firstname:<input class="inputbox" type="text" value="Firstname" name="firstname"></input><br></li>
-						<li class="list-group-item">Lastname:<input class="inputbox" type="text" value="Lastname" name="lastname"></input></li>
-						<li class="list-group-item">Email:<input class="inputbox" type="text" value="Email Address" name="email"></input><br></li>
-						<li class="list-group-item">Street Address:<input class="inputbox" value="Street Address" type="text" name="address"></input></li>
-						<li class="list-group-item">DOB:<input class="inputboxSpec" id="Month" value="MM" type="text" name="Month"></input><input class="inputboxSpec" id="Day"  value="DD" type="text" name="Day"></input><input class="inputboxSpec" id="Year" value="YYYY" type="text" name="Year"></input><br></li>
-						<li class="list-group-item">Password:<input class="inputbox" value="Password" type="password" name="password"></input></li>
-						<li class="list-group-item">Re-enter Password:<input class="inputbox" value="Password" type="password" name="password_confirm"></input></li>
-						<li class="list-group-item">Receive our Newsletter:<input class="inputbox" type="checkbox" name="password_confirm"></input></li>
-						<li class="list-group-item">User-type:<select class="inputbox" name="account_type">
-								<option value="vendor">Vendor</option>
-								<option value="buyer">Buyer</option>
-							<select>
-						</li>
-						<div class="profile_pic">
-							<img id="profile_img" src="assets/Create-Acct/images/placeholder.jpg" alt=""></img><input class="btn-sm btn-dark" id="browse" type="file" id="myFile"></input>
-						</div>
-						<input class="btn-sm btn-dark" id="submit" type="submit" value="Submit">
-					</ul>
-				</form>
-			</div>
-		</div>
-	</div>
-</body>
+    <body>
+    <div class="container-fluid banner">
+        <div class="row">
+            <div class="col-md-6">
+                <img id="banner_img" src="{% static "images/dogear.jpg" %}"/>
+            </div>
+            <div class="col-6">
+                <h3>Create your Dog-Ear account</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="offset-4 col-md-8">
+                <form>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            Firstname:
+                            <input class="inputbox" type="text" value="Firstname" name="firstname"/><br></li>
+                        <li class="list-group-item">
+                            Lastname:
+                            <input class="inputbox" type="text" value="Lastname" name="lastname"/></li>
+                        <li class="list-group-item">
+                            Email:
+                            <input class="inputbox" type="text" value="Email Address" name="email"/><br></li>
+                        <li class="list-group-item">
+                            Street Address:
+                            <input class="inputbox" value="Street Address" type="text" name="address"/></li>
+                        <li class="list-group-item">
+                            DOB:
+                            <input class="inputboxSpec" id="Month" value="MM" type="text" name="Month"/>
+                            <input class="inputboxSpec" id="Day" value="DD" type="text"
+                                   name="Day"/>
+                            <input class="inputboxSpec" id="Year" value="YYYY" type="text" name="Year"/><br></li>
+                        <li class="list-group-item">
+                            Password:
+                            <input class="inputbox" value="Password" type="password" name="password"/></li>
+                        <li class="list-group-item">
+                            Re-enter Password:
+                            <input class="inputbox" value="Password" type="password"
+                                   name="password_confirm"/></li>
+                        <li class="list-group-item">
+                            Receive our Newsletter:
+                            <input class="inputbox" type="checkbox" name="password_confirm"/></li>
+                        <li class="list-group-item">
+                            User-type:
+                            <select class="inputbox" name="account_type">
+                                <option value="vendor">Vendor</option>
+                                <option value="buyer">Buyer</option>
+                            </select>
+                        </li>
+                        <div class="profile_pic">
+                            <img id="profile_img" src="{% static "images/placeholder.jpg" %}" alt=""/><input
+                                class="btn-sm btn-dark" id="browse" type="file" id="myFile"/>
+                        </div>
+                        <input class="btn-sm btn-dark" id="submit" type="submit" value="Submit">
+                    </ul>
+                </form>
+            </div>
+        </div>
+    </div>
+    </body>
 
 {% endblock main_content %}
