--- a/templates/base.html
+++ b/templates/base.html
@@ -87,9 +87,9 @@
         <div class="navbar-nav ml-auto">
 
             <!-- Search Bar -->
-            <form method="GET" class="form-inline my-2 my-lg-0">
+            <form method="GET" class="form-inline my-2 my-lg-0" action="/book/">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search Books or Authors"
-                       aria-label="searchBar">
+                       aria-label="searchBar" name="q">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="navbar-nav">
