--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -3,8 +3,8 @@
 {% block main_content %}
 
 <form method="post" action='' enctype='multipart/form-data'> {% csrf_token %}
-	{{user_form.as_p}}
-    {{member_form.as_p}}
+	{{user_form.as_ul}}
+    {{member_form.as_ul}}
 	<input type="submit" class='btn btn-default' value="Create Account"/>
 </form>
 
